syntax = "proto3";

package api.v1;

option go_package = "github.com/lynx-go/lynx-app-template/genproto/api/v1;apipb";

import "google/rpc/status.proto";

message TokenPasswordRequest {
  string username = 1;
  string email = 2;
  string phone = 3;
  string password = 4;
}

message UserInfo {
  int64 id = 1;
  string username = 2;
  string display_name = 3;
  string avatar_url = 4;
  string email = 5;
  string phone = 6;
}

message TokenResponse {
  google.rpc.Status error = 1;

  string token = 3;
  int64 expires_at = 4;
  string refresh_token = 5;
  int64 refresh_token_expires_at = 6;
  UserInfo user_info = 7;
}



message RefreshTokenRequest {
  string token = 1;
}

message SignUpRequest {
  string username = 1;
  string email = 2;
  string phone = 3;
  string password = 4;
  map<string, string> data = 5;
}

message SignUpResponse {
  google.rpc.Status error = 1;

  UserInfo user_info = 6;
}